--- a/public/main.css
+++ b/public/main.css
@@ -1,3 +1,171 @@
 body {
   font-family: 'Montserrat', sans-serif;
+  background-image: url(https://i.imgur.com/ha2GG88.jpg);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: left;
+}
+
+
+/* LOG IN AND REGISTER */
+
+.logo {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 15%;
+  margin-bottom: 5%;
+}
+
+.logoH1 {
+  font-family: 'Slackey', cursive;
+  color: #000;
+  font-size: 125px;
+  margin: 0;
+}
+
+.logoH2 {
+  font-family: 'Oswald', sans-serif;
+  color: #157347;
+  font-size: 50px;
+  text-shadow: 3px 3px 3px #000;
+}
+
+.logoH4 {
+  font-family: 'Oswald', sans-serif;
+  color: #000;
+  font-size: 30px;
+  background-color: rgba(255, 255, 255, .3)
+}
+
+.tomato {
+  width: 115px;
+}
+
+
+.sessionDiv {
+  display: flex;
+  justify-content: center;
+  max-width: 1100px;
+  margin: 0 auto;
+}
+
+.newSession {
+  display: flex;
+  justify-content: center;
+  width: 70%;
+}
+
+.loginDiv, .authDiv {
+  display: flex;
+  justify-content: center;
+}
+
+.loginButton {
+  font-size: 1.4em;
+}
+
+.toggleAuth {
+  margin-top: 5%;
+  background-color: #E52029;
+  color: ghostwhite;
+  font-size: 1.6em;
+}
+
+
+
+/* FORMS */
+
+fieldset {
+  border: 3px solid black;
+  border-radius: 10px;
+  padding: 20px;
+  background-color: rgba(255, 255, 255, .9);
+  width: 100%;
+}
+
+legend {
+  float: none;
+  padding: 0 40px;
+  margin: 0;
+  border: 3px solid black;
+  background-color: #E52029;
+  color: ghostwhite;
+  width: auto;
+  font-size: 2em;
+  text-align: right;
+}
+
+input.form-control:focus,
+input[type=text]:focus,
+input[type=password]:focus {
+  border: 2px solid black;
+  outline: 1px solid black;
+  box-shadow: none;
+}
+
+.form-label {
+  color: black;
+  font-weight: bold;
+}
+
+.form-control {
+  border: 2px solid black;
+}
+
+.row {
+  display: flex;
+  justify-content: center;
+}
+
+.btn {
+  border: 2px solid black;
+  box-sizing: border-box;
+}
+
+.btn:hover {
+  border: 2px solid black;
+  color: black;
+}
+
+
+/* MEDIA QUERIES */
+
+@media screen and (max-width: 700px) {
+
+
+
+}
+
+@media screen and (max-width: 800px) {
+
+  .logoH1 {
+    font-size: 70px;
+  }
+
+  .tomato {
+    width: 60px;
+  }
+
+  .logoH2 {
+    font-size: 30px;
+  }
+
+  .logoH4 {
+    font-size: 20px;
+  }
+}
+
+@media screen and (min-width: 1400px) {
+
+  .logoH1 {
+    font-size: 140px;
+  }
+
+  .tomato {
+    width: 130px;
+  }
+
 }
