--- a/public/main.css
+++ b/public/main.css
@@ -83,39 +83,101 @@ body {
 }
 
 
+/* HEADER */
+
+header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2%;
+}
+
+.headerH1 {
+  font-family: 'Slackey', cursive;
+  color: #000;
+  font-size: 120px;
+}
+
+.headerTomato {
+  width: 110px;
+}
+
+
 /* NAV BAR */
 
 nav {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
-  margin-top: 2%;
   margin-bottom: 5%;
-}
-
-.navH1 {
-  font-family: 'Slackey', cursive;
-  color: #000;
-  font-size: 90px;
-  margin: 0;
 }
 
 .navPicture {
   width: 125px;
   border: 2px solid black;
+  border-radius: 50%;
 }
 
-.navTomato {
-  width: 80px;
-}
-
-.logoutButton {
+.addButton, .filterButton, .logoutButton {
   font-size: 1.4em;
+  color: ghostwhite;
   border: 2px solid black;
 }
 
 
-/* HEADER / FILTERS */
+/* SIDEBAR / FILTER BUTTONS */
+
+.filterDiv {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  background-color: #253D5B;
+  min-width: 300px;
+  width: 15%;
+  height: 100%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  padding-top: 80px;
+  border-right: 5px solid black;
+}
+
+.filterForm {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+}
+
+.filterSelect, .filterType, .filterOwner, .filterAll, .closeFilter {
+  font-size: 1.4em;
+  border: 2px solid black;
+  margin-bottom: 10%;
+}
+
+.filterType {
+  margin-bottom: 20%;
+}
+
+.closeFilter {
+  margin-top: 10%;
+}
+
+.closeFilter {
+  justify-self: flex-end;
+}
+
+/* SHOW RECIPE */
+
+.showPicture {
+  width: 10%;
+}
+
+.showImage {
+  width: 250px;
+}
+
 
 /* DEFAULT FORMS */
 
@@ -139,15 +201,9 @@ legend {
   text-align: right;
 }
 
-input.form-control:focus,
-input.form-select:focus,
-input[type=text]:focus,
-input[type=password]:focus,
-input.form-control:active,
-input.form-select:active,
-input[type=text]:active,
-input[type=password]:active,
-button {
+input.form-control:focus, input.form-select:focus, input[type=text]:focus, input[type=password]:focus,
+input.form-control:active, input.form-select:active, input[type=text]:active, input[type=password]:active,
+button, .btn:active {
   border: 2px solid black;
   box-shadow: none;
   outline: none;
@@ -158,7 +214,7 @@ button {
   font-weight: bold;
 }
 
-.form-control {
+.form-control, .form-select {
   border: 2px solid black;
 }
 
@@ -171,11 +227,6 @@ button {
   border: 2px solid black;
   color: black;
   font-weight: bold;
-}
-
-.btn:active {
-  outline: none;
-  box-shadow: none;
 }
 
 
@@ -205,15 +256,15 @@ button {
     font-size: 20px;
   }
 
-  .navH1 {
-    font-size: 50px
+  .headerH1 {
+    font-size: 60px
   }
 
-  .navTomato {
-    width: 40px;
+  .headerTomato {
+    width: 50px;
   }
 
-  .logoutButton {
+  .addButton, .filterButton, .logoutButton {
     font-size: .9em;
   }
 
@@ -225,27 +276,27 @@ button {
 @media screen and (min-width: 1400px) {
 
   .logoH1 {
-    font-size: 140px;
+    font-size: 170px;
   }
 
   .tomato {
-    width: 130px;
+    width: 160px;
   }
 
-  .navH1 {
-    font-size: 110px
+  .headerH1 {
+    font-size: 150px
   }
 
-  .navTomato {
-    width: 100px;
+  .headerTomato {
+    width: 140px;
   }
 
   .navPicture {
     width: 175px;
   }
 
-  .logoutButton {
-    font-size: 1.6em;
+  .addButton, .filterButton, .logoutButton {
+    font-size: 1.7em;
   }
 
 }
